--- a/WebPerformanceMeter/WebPerformanceMeter.csproj
+++ b/WebPerformanceMeter/WebPerformanceMeter.csproj
@@ -10,4 +10,8 @@
     <Folder Include="Runner\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Playwright" Version="1.14.0" />
+  </ItemGroup>
+
 </Project>
