replace http logger

--- a/WebPerformanceMeter/WebPerformanceMeter.csproj
+++ b/WebPerformanceMeter/WebPerformanceMeter.csproj
@@ -7,9 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Logger\HttpClientLogger\" />
+    <Folder Include="Logger\BrowserLogger\" />
     <Folder Include="Logger\GrpcLogger\" />
-    <Folder Include="Logger\HttpLogger\" />
+    <Folder Include="Logger\JavascriptRequestLogger\" />
     <Folder Include="Logger\WebSocketLogger\" />
     <Folder Include="Runner\" />
   </ItemGroup>
