add browser log, add graph to report

--- a/WebPerformanceMeter/WebPerformanceMeter.csproj
+++ b/WebPerformanceMeter/WebPerformanceMeter.csproj
@@ -7,10 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Logger\BrowserLogger\" />
     <Folder Include="Logger\GrpcLogger\" />
     <Folder Include="Logger\JavascriptRequestLogger\" />
     <Folder Include="Logger\WebSocketLogger\" />
+    <Folder Include="Tools\JavascriptTool\" />
+    <Folder Include="Tools\GrpcTool\" />
+    <Folder Include="Tools\WebSocketTool\" />
+    <Folder Include="Users\Grpc\" />
+    <Folder Include="Users\WebSocket\" />
   </ItemGroup>
 
   <ItemGroup>
