--- a/PerformanceTests/PerformanceTests.csproj
+++ b/PerformanceTests/PerformanceTests.csproj
@@ -7,12 +7,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentAssertions" Version="6.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="5.0.8" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\TestWebApiServer\TestWebApiServer.csproj" />
     <ProjectReference Include="..\WebPerformanceMeter\WebPerformanceMeter.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Tests\JsonPlaceholder\Demo9_PostDto.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
