--- a/GrpcWebApplication/appsettings.json
+++ b/GrpcWebApplication/appsettings.json
@@ -1,9 +1,11 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Default": "None",
+      "Microsoft.AspNetCore.Routing.EndpointMiddleware": "None",
+      "Microsoft.AspNetCore.Hosting.Diagnostics": "None"
+      //"Microsoft": "Warning",
+      //"Microsoft.Hosting.Lifetime": "Information"
     }
   },
   "AllowedHosts": "*",
