--- a/WebPerformanceMeterLogServer/WebPerformanceMeterLogServer.csproj
+++ b/WebPerformanceMeterLogServer/WebPerformanceMeterLogServer.csproj
@@ -11,7 +11,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Grpc.AspNetCore" Version="2.34.0" />
+	<PackageReference Include="Grpc.AspNetCore" Version="2.40.0" />
+	<PackageReference Include="Grpc.AspNetCore.Server.Reflection" Version="2.40.0" />
+	<PackageReference Include="Grpc.AspNetCore.Web" Version="2.40.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
   </ItemGroup>
 
