--- a/WebPerformanceMeter/WebPerformanceMeter.csproj
+++ b/WebPerformanceMeter/WebPerformanceMeter.csproj
@@ -4,7 +4,23 @@
     <OutputType>Library</OutputType>
     <TargetFramework>net5.0</TargetFramework>
     <Nullable>enable</Nullable>
+	<Version>0.0.0.1</Version>
+	<Authors>Evgeny Nazarchuk</Authors>
+	<PackageProjectUrl>https://github.com/evgenynazarchuk/WebPerformanceMeter/wiki</PackageProjectUrl>
+	<PackageLicenseFile></PackageLicenseFile>
+	<RepositoryUrl>https://github.com/evgenynazarchuk/WebPerformanceMeter</RepositoryUrl>
+	<Copyright>Copyright © 2021 Evgeny Nazarchuk</Copyright>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="LICENSE" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="LICENSE">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Interfaces\Users\BrowserUser\" />
