--- a/RestWebApplication.WebPerformanceTest/RestWebApplication.WebPerformanceTest.csproj
+++ b/RestWebApplication.WebPerformanceTest/RestWebApplication.WebPerformanceTest.csproj
@@ -1,8 +1,24 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
+	<Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="5.0.11" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\RestWebApplication\RestWebApplication.csproj" />
+    <ProjectReference Include="..\WebPerformanceMeter\WebPerformanceMeter.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Users\UploadFile_testfile.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 
 </Project>
